# text-data-cleaner

./: Cargo.toml
src/: lib.rs  main.rs
src/clean/: mod.rs
src/common/: append.rs  mod.rs  prepend.rs  strip.rs
src/french/: mod.rs
src/normalize/: mod.rs
src/substitutions/: mod.rs
src/utils/: mod.rs
src/whitespaces/: mod.rs
